[gd_scene load_steps=4 format=3 uid="uid://dag6sy5os3vgu"]

[ext_resource type="Script" path="res://GUI/battle_gui.gd" id="1_14ncc"]
[ext_resource type="Theme" uid="uid://daemuuguf1eqs" path="res://GUI/Themes/ButtonTheme_BattleMenu.tres" id="1_bcw7p"]
[ext_resource type="PackedScene" uid="uid://py55gukb4td1" path="res://GUI/item_button.tscn" id="3_60mnj"]

[node name="BattleGUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_14ncc")

[node name="BattleMenu" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 71.0
focus_neighbor_right = NodePath("../SkillMenu")
theme_override_constants/separation = 13

[node name="Attack" type="Button" parent="BattleMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../Items")
theme = ExtResource("1_bcw7p")
text = "Attack"

[node name="Skills" type="Button" parent="BattleMenu"]
layout_mode = 2
theme = ExtResource("1_bcw7p")
text = "Skills"

[node name="Magic" type="Button" parent="BattleMenu"]
layout_mode = 2
theme = ExtResource("1_bcw7p")
text = "Magic"

[node name="Items" type="Button" parent="BattleMenu"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Attack")
theme = ExtResource("1_bcw7p")
text = "Items"

[node name="SkillMenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 56.0
offset_top = 16.0
offset_right = 96.0
offset_bottom = 56.0

[node name="MagicMenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 56.0
offset_top = 40.0
offset_right = 96.0
offset_bottom = 84.0

[node name="ItemsMenu" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 64.0
offset_right = 96.0
offset_bottom = 108.0

[node name="Button" parent="ItemsMenu" instance=ExtResource("3_60mnj")]
layout_mode = 2

[node name="Button2" parent="ItemsMenu" instance=ExtResource("3_60mnj")]
layout_mode = 2

[node name="Button3" parent="ItemsMenu" instance=ExtResource("3_60mnj")]
layout_mode = 2

[node name="Button4" parent="ItemsMenu" instance=ExtResource("3_60mnj")]
layout_mode = 2

[node name="Button5" parent="ItemsMenu" instance=ExtResource("3_60mnj")]
layout_mode = 2

[node name="Button6" parent="ItemsMenu" instance=ExtResource("3_60mnj")]
layout_mode = 2

[node name="Button7" parent="ItemsMenu" instance=ExtResource("3_60mnj")]
layout_mode = 2

[node name="Button8" parent="ItemsMenu" instance=ExtResource("3_60mnj")]
layout_mode = 2

[node name="Button9" parent="ItemsMenu" instance=ExtResource("3_60mnj")]
layout_mode = 2

[node name="Button10" parent="ItemsMenu" instance=ExtResource("3_60mnj")]
layout_mode = 2

[node name="Button11" parent="ItemsMenu" instance=ExtResource("3_60mnj")]
layout_mode = 2

[node name="Button12" parent="ItemsMenu" instance=ExtResource("3_60mnj")]
layout_mode = 2
